# ostree-docker-builder

./: .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
packaging/: Makefile.dist-packaging  ostree-docker-builder.spec.in
src/: ostree-docker-builder.c
